Spacing fix

--- a/src/app/component/subscription-bar/subscription-bar.component.scss
+++ b/src/app/component/subscription-bar/subscription-bar.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: flex;
-  :nth-child(2) {
+  & > :nth-child(2) {
     margin-left: 10px;
   }
 }
